apps/jaeger/overlays/ops-old/virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jaeger
  namespace: observability
spec:
  hosts:
  - "jaeger.analect.com"
  gateways:
  - istio-system/istio-ingressgateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: jaeger-query.observability.svc.civo.cluster
